--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "dependencies": {
     "next": "14.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "^5.3.3"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "@types/react": "^18.2.46",
+    "@types/node": "^20.11.5"
   }
 }
